--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Конфиденциальная инфа
+config.ini
+
+# ================ #
+# PYTHON.GITIGNORE #
+# ================ #
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
